apps/base/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
spec:
  ports:
    - port: 80
  selector:
    app: vaultwarden
  type: ClusterIP
